documents: improve custom badges

--- a/prologin/documents/templates/documents/badges.tex
+++ b/prologin/documents/templates/documents/badges.tex
@@ -27,9 +27,7 @@
         \begin{picture}(8.2,5.5)
           \includegraphics[width=8.2cm]{logo{{ year }}}
           \put(-8,4){\Huge{\textsf{\textbf{
-            {{ organizer.0|escapetex }} }}}}
-          \put(-8,3){\makebox[82mm][r]{\Huge{\textsf{\textbf{
-            {{ organizer.1|escapetex }} }}}}}
+            {{ organizer|escapetex }} }}}}
         \end{picture}
         {% cycle '&' '\\\\\\hline' %}
       {% endfor %}
