--- a/prologin/locale/fr/LC_MESSAGES/django.po
+++ b/prologin/locale/fr/LC_MESSAGES/django.po
@@ -20,7 +20,7 @@ msgstr ""
 "Project-Id-Version: Prologin website\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-10-16 21:48+0200\n"
-"PO-Revision-Date: 2016-10-16 19:48+0000\n"
+"PO-Revision-Date: 2016-10-16 19:51+0000\n"
 "Last-Translator: Alexandre Macabies <web+transifex@zopieux.com>\n"
 "Language-Team: French (http://www.transifex.com/prologin/prologin-site/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -4467,7 +4467,7 @@ msgstr "Vos nouvelles réponses ont été enregistrées."
 
 #: schools/admin.py:21
 msgid "Merge selected schools…"
-msgstr "Fusionner les établissements sélectionnées…"
+msgstr "Fusionner les établissements sélectionnés…"
 
 #: schools/admin_views.py:20
 msgid "Add to merge"
