--- a/prologin/locale/fr/LC_MESSAGES/django.po
+++ b/prologin/locale/fr/LC_MESSAGES/django.po
@@ -19,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Prologin website\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-10-16 22:30+0200\n"
-"PO-Revision-Date: 2016-10-16 20:31+0000\n"
+"POT-Creation-Date: 2016-10-17 20:30+0200\n"
+"PO-Revision-Date: 2016-10-17 18:37+0000\n"
 "Last-Translator: Alexandre Macabies <web+transifex@zopieux.com>\n"
 "Language-Team: French (http://www.transifex.com/prologin/prologin-site/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -4470,13 +4470,29 @@ msgstr "Vérifiez vos réponses"
 msgid "Your new answers have been saved."
 msgstr "Vos nouvelles réponses ont été enregistrées."
 
-#: schools/admin.py:21
+#: schools/admin.py:41
+msgid "Total contestant count"
+msgstr "Candidats"
+
+#: schools/admin.py:42
+msgid "Current edition contestant count"
+msgstr "Candidats pour l'édition en cours"
+
+#: schools/admin.py:50
 msgid "Merge selected schools…"
 msgstr "Fusionner les établissements sélectionnés…"
 
-#: schools/admin_views.py:20
+#: schools/admin_views.py:22
 msgid "Add to merge"
 msgstr "Ajouter à la fusion"
+
+#: schools/models.py:81
+msgid "School"
+msgstr "Établissement"
+
+#: schools/models.py:82
+msgid "Schools"
+msgstr "Établissements"
 
 #: schools/templates/admin/schools/merge.html:39
 msgid "Home"
