--- a/prologin/locale/fr/LC_MESSAGES/django.po
+++ b/prologin/locale/fr/LC_MESSAGES/django.po
@@ -21,7 +21,7 @@ msgstr ""
 "Project-Id-Version: Prologin website\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-12-23 13:00+0100\n"
-"PO-Revision-Date: 2016-12-23 12:01+0000\n"
+"PO-Revision-Date: 2016-12-23 12:07+0000\n"
 "Last-Translator: Prologin <association@prologin.org>\n"
 "Language-Team: French (http://www.transifex.com/prologin/prologin-site/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -2681,7 +2681,7 @@ msgstr "Qui peut participer&nbsp;?"
 #: pages/templates/pages/about-contest.html:44
 msgid ""
 "Any student under 21, living in Europe, who can understand and write French."
-msgstr "Tous les étudiant(e)s francophones de moins de 21 ans, habitant dans l'Union Européenne."
+msgstr "Tous les étudiant(e)s francophones de moins de 21 ans, habitant en Europe."
 
 #: pages/templates/pages/about-contest.html:45
 msgid "Students from EPITA/EPITECH are not allowed to participate."
