--- a/prologin/locale/fr/LC_MESSAGES/django.po
+++ b/prologin/locale/fr/LC_MESSAGES/django.po
@@ -8,6 +8,7 @@
 # Alexis Descamps <alexis.art.descamps@gmail.com>, 2015
 # Antoine Pietri <antoine.pietri1@gmail.com>, 2015
 # cbeausei <clementbeauseigneur@hotmail.fr>, 2016
+# cbeausei <clementbeauseigneur@hotmail.fr>, 2016
 # Dettorer <p.hervot@gmail.com>, 2015
 # Dettorer <p.hervot@gmail.com>, 2015
 # Prologin <association@prologin.org>, 2016
@@ -21,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Prologin website\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-12-23 15:54+0100\n"
-"PO-Revision-Date: 2016-12-23 14:56+0000\n"
+"POT-Creation-Date: 2016-12-23 19:41+0100\n"
+"PO-Revision-Date: 2016-12-23 18:44+0000\n"
 "Last-Translator: cbeausei <clementbeauseigneur@hotmail.fr>\n"
 "Language-Team: French (http://www.transifex.com/prologin/prologin-site/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -2680,9 +2681,11 @@ msgid "Who can qualify?"
 msgstr "Qui peut participer&nbsp;?"
 
 #: pages/templates/pages/about-contest.html:44
+#, python-format
 msgid ""
-"Any student under 21, living in Europe, who can understand and write French."
-msgstr "Tous les étudiant(e)s francophones de moins de 21 ans, habitant en Europe."
+"\"Any student born in or after %(born_year)s, living in Europe, who can "
+"understand and write French.\" "
+msgstr "Tous les étudiant(e)s francophones nés en %(born_year)s ou après, habitant en Europe."
 
 #: pages/templates/pages/about-contest.html:45
 msgid "Students from EPITA are not allowed to participate."
