--- a/prologin/locale/fr/LC_MESSAGES/django.po
+++ b/prologin/locale/fr/LC_MESSAGES/django.po
@@ -22,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Prologin website\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-12-23 19:41+0100\n"
-"PO-Revision-Date: 2016-12-23 18:44+0000\n"
+"POT-Creation-Date: 2016-12-31 14:37+0100\n"
+"PO-Revision-Date: 2016-12-31 13:38+0000\n"
 "Last-Translator: cbeausei <clementbeauseigneur@hotmail.fr>\n"
 "Language-Team: French (http://www.transifex.com/prologin/prologin-site/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -2683,8 +2683,8 @@ msgstr "Qui peut participer&nbsp;?"
 #: pages/templates/pages/about-contest.html:44
 #, python-format
 msgid ""
-"\"Any student born in or after %(born_year)s, living in Europe, who can "
-"understand and write French.\" "
+"Any student born in or after %(born_year)s, living in Europe, who can "
+"understand and write French. "
 msgstr "Tous les étudiant(e)s francophones nés en %(born_year)s ou après, habitant en Europe."
 
 #: pages/templates/pages/about-contest.html:45
