--- a/prologin/documents/templates/documents/convocation-finale.tex
+++ b/prologin/documents/templates/documents/convocation-finale.tex
@@ -1,4 +1,5 @@
 {% load i18n latex add_days %}{% autoescape off %}
+{% load utils %}
 \documentclass[a4paper,11pt]{article}
 \usepackage{prologin-letter}
 {% include "documents/stub-preamble.tex" %}
@@ -20,8 +21,9 @@
 
 Bonjour {{ user.first_name|title|escapetex }},
 
-Nous avons le plaisir de vous informer que vous êtes sélectionné
-pour la finale du concours Prologin {{ year }}, qui se déroulera à:
+Nous avons le plaisir de vous informer que vous êtes
+sélectionné{{ user|genderize }}
+pour la finale du concours Prologin {{ year }}, qui se déroulera à~:
 
 {\par\smallskip\noindent\centering
 \begin{minipage}{0.5\textwidth}
@@ -44,7 +46,7 @@ programmation se fera obligatoirement en C, C++, Java, Python, PHP, C\#,
 Haskell ou OCaml. Nous vous demandons de bien vouloir vous munir d'\textbf{une
 pièce d'identité et de cette convocation, ainsi que de tous les documents
 ci-joints dûment remplis}. Attention, sans ces documents, nous ne pourrons pas
-vous accepter!
+vous accepter~!
 
 Si vous le souhaitez, il vous est possible de passer la nuit du vendredi dans
 les locaux. Les organisateurs Prologin assureront l'accueil à partir de 18~h~00
@@ -54,14 +56,14 @@ En attendant, je vous invite à découvrir sur le site
 \texttt{https://prologin.org} les sujets des finales des années précédentes.
 Nous nous occuperons de vous durant ces trois jours pour tout ce qui concerne
 la nourriture et le logement. Voici quelques recommandations quant aux affaires
-dont vous aurez besoin:
+dont vous aurez besoin~:
 
 \begin{itemize}
-  \item deux tenues complètes de rechange ;
-  \item une tenue que vous n'avez pas peur de salir un peu ;
-  \item une grande serviette de bain, ainsi qu'une brosse à dents ;
-  \item un sac de couchage (nous fournissons le matelas) ;
-  \item une bonne dose de courage et de bonne humeur!
+  \item deux tenues complètes de rechange~;
+  \item une tenue que vous n'avez pas peur de salir un peu~;
+  \item une grande serviette de bain, ainsi qu'une brosse à dents~;
+  \item un sac de couchage (nous fournissons le matelas)~;
+  \item une bonne dose de courage et de bonne humeur~!
 \end{itemize}
 
 \vspace{0.5cm}
