--- a/prologin/documents/templates/documents/convocation-finale.tex
+++ b/prologin/documents/templates/documents/convocation-finale.tex
@@ -13,9 +13,9 @@
 
 \def\destinataire{%
 {{ user.get_full_name|title|escapetex|nonempty }}\\
-{{ user.country|escapetex|nonempty }}\\
 {{ user.address|escapetex|nonempty }}\\
-{{ user.postal_code|escapetex|nonempty }} {{ user.city|escapetex|nonempty }}%
+{{ user.postal_code|escapetex|nonempty }} {{ user.city|escapetex|nonempty }}\\
+{{ user.country|escapetex|nonempty }} %
 }
 \header
 
