--- a/prologin/locale/fr/LC_MESSAGES/django.po
+++ b/prologin/locale/fr/LC_MESSAGES/django.po
@@ -23,9 +23,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Prologin website\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-02-26 13:27+0100\n"
-"PO-Revision-Date: 2017-02-26 12:27+0000\n"
-"Last-Translator: Théophile Bastian <contact@tobast.fr>\n"
+"POT-Creation-Date: 2017-03-28 19:05+0200\n"
+"PO-Revision-Date: 2017-03-28 17:07+0000\n"
+"Last-Translator: Alexandre Macabies <web+transifex@zopieux.com>\n"
 "Language-Team: French (http://www.transifex.com/prologin/prologin-site/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3074,7 +3074,7 @@ msgid ""
 "why, even though candidates seat the exam individually, the competition should facilitate the exchange of ideas\n"
 "between candidates. To promote these exchanges, the Prologin team tries to design the contest topics so they\n"
 "put forward playful aspects. Meanwhile, everything is done so that participants can and should exchange ideas\n"
-"within a cheerful atmoshpere. Combining work and pleasure is therefore a key objective of Prologin.</p>\n"
+"within a cheerful atmosphere. Combining work and pleasure is therefore a key objective of Prologin.</p>\n"
 "\n"
 "<p class=\"text-justify\">We want to allow the candidates to take advantage of the competition to enhance their skills. We try to cover as\n"
 "many areas of computer science: artificial intelligence algorithms, general culture, various programming\n"
@@ -3100,7 +3100,7 @@ msgid ""
 "We also appreciate your feedback and your suggestions.</p>\n"
 "\n"
 "<p class=\"text-justify\">We also need your help with the training section, where users can try themselves on a large set of statements.\n"
-"If you can give us a hand, please do: we are looking for new statments (originals or translations of third parties),\n"
+"If you can give us a hand, please do: we are looking for new statements (originals or translations of third parties),\n"
 "courses, and corrections. Of course, please contact us before contributing so we can prevent certain parts\n"
 "being done in duplicate.</p>\n"
 msgstr "<p class=\"text-justify\">Il existe divers moyens de contribuer&nbsp;: promouvoir l'événement, développer le site internet et l'architecture logicielle pour la finale, aider lors des épreuves régionales, participer dans les forums, etc.\nNous apprécions aussi les retours et suggestions.</p>\n\n<p class=\"text-justify\">Nous avons aussi besoin de votre aide pour la section d'entraînement, dans laquelle les utilisateurs peuvent se mesurer à un grand nombre de problèmes.\nSi vous pouvez nous donner un coup de main, n'hésitez pas&nbsp;: nous sommes à la recherche de nouveaux problèmes (originaux ou traduits depuis d'autres sources), cours et corrections. Bien sûr, veuillez nous contacter avant de contribuer afin que nous puissions éviter que certaines choses soient faites en double.</p>\n"
