document: change orgas-externes

--- a/prologin/documents/templates/documents/orgas-externes.tex
+++ b/prologin/documents/templates/documents/orgas-externes.tex
@@ -41,14 +41,16 @@ Disponibilités (cochez les cases) :
 \tabularnewline
 \hline
 15 h -- 1 h & 7 h -- 14 h & 14 h -- 24 h & 0 h -- 10 h & 10 h -- 21 h &
-0 h -- 10 h & 10 h -- 13 h\tabularnewline
+0 h -- 10 h & 10 h -- 20 h\tabularnewline
 \hline
-Accueil & Déco & Jeux & Réveil & Bataille & Mousse & Banquet\tabularnewline
+Accueil & Déco & Jeux & Réveil & Bataille & Mousse & Banquet\textsuperscript{*}\tabularnewline
 \hline
 &&&&&&\tabularnewline
 \hline
 \end{tabular}
 \end{center}
+
+* et rangement
 
 {\Large$\square$} J'ai un diplôme de secouriste de niveau PSC1 ou plus.
 
