document: add portrayal agreement to the enrollment form

--- a/prologin/documents/templates/documents/fiche-adhesion.tex
+++ b/prologin/documents/templates/documents/fiche-adhesion.tex
@@ -34,5 +34,44 @@ Fait à \hrulefill, le \hrulefill.
 
 Signature :
 
+\newpage
+
+\begin{Large}
+    \begin{center}
+        \textbf{Formulaire d'autorisation de diffusion d'image}
+    \end{center}
+\end{Large}
+
+Je soussigné(e) \hrulefill
+
+Adresse \hrulefill
+
+Code postal \hrulefill{} Ville \hrulefill\hrulefill\hrulefill{} Pays \hrulefill
+
+autorise l'association Prologin à me photographier et me filmer dans
+le cadre de mon activité au sein de l'association.
+
+J'accepte l'utilisation et l'exploitation non commerciale de mon
+image dans le cadre de la promotion du concours, notamment sur le site internet
+de l'association, ainsi que sa reproduction sur quelque support que ce soit
+(papier, support analogique ou support numérique) actuel ou futur et ce, pour la
+durée de vie des documents réalisés ou de l'association.
+
+En conséquence de quoi, je renonce expressément à me prévaloir d'un
+quelconque droit à l'image et à toute action à l'encontre de Prologin qui
+trouverait son origine dans l'exploitation de mon image dans le cadre précité.
+
+\begin{signatureframe}{Date et signature du candidat}\end{signatureframe}
+
+\begin{legalrepframe}[title=À remplir par le représentant légal si le candidat est mineur]
+Je soussigné(e) \hrulefill
+
+déclare être le parent ou le représentant légal du mineur nommé
+ci-dessus, et avoir l'autorité légale de signer cette autorisation en son nom.
+
+\begin{signatureframe}{Date et signature du représentant légal}\end{signatureframe}
+\end{legalrepframe}
+
+
 \end{document}
 {% endautoescape %}
