documents: fix fiche-adhesion.tex

--- a/prologin/documents/templates/documents/fiche-adhesion.tex
+++ b/prologin/documents/templates/documents/fiche-adhesion.tex
@@ -61,9 +61,9 @@ En conséquence de quoi, je renonce expressément à me prévaloir d'un
 quelconque droit à l'image et à toute action à l'encontre de Prologin qui
 trouverait son origine dans l'exploitation de mon image dans le cadre précité.
 
-\begin{signatureframe}{Date et signature du candidat}\end{signatureframe}
+\begin{signatureframe}{Date et signature du membre}\end{signatureframe}
 
-\begin{legalrepframe}[title=À remplir par le représentant légal si le candidat est mineur]
+\begin{legalrepframe}[title=À remplir par le représentant légal si le membre est mineur]
 Je soussigné(e) \hrulefill
 
 déclare être le parent ou le représentant légal du mineur nommé
