gcc: update translations

--- a/prologin/locale/fr/LC_MESSAGES/django.po
+++ b/prologin/locale/fr/LC_MESSAGES/django.po
@@ -25,8 +25,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Prologin website\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-26 19:05+0100\n"
-"PO-Revision-Date: 2019-02-26 20:08+0100\n"
+"POT-Creation-Date: 2019-02-28 15:23+0100\n"
+"PO-Revision-Date: 2019-02-28 15:25+0100\n"
 "Last-Translator: Antoine Pietri <antoine.pietri1@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/prologin/prologin-site/"
 "language/fr/)\n"
@@ -2305,7 +2305,7 @@ msgid "Summer camps locations"
 msgstr "Lieux de stage"
 
 #: gcc/templates/gcc/application/wishes.html:16
-msgid "Chose my location wishes"
+msgid "Choose my location wishes"
 msgstr "Choisir mes lieux de stage"
 
 #: gcc/templates/gcc/application/wishes.html:21
@@ -2579,7 +2579,7 @@ msgid "More informations"
 msgstr "Plus d'informations"
 
 #: gcc/templates/gcc/index.html:51
-msgid "Everything you have to know about internships"
+msgid "Everything you have to know about the summer camp"
 msgstr "Tous ce qu'il y a à savoir sur le stage"
 
 #: gcc/templates/gcc/index.html:52
@@ -2593,8 +2593,8 @@ msgstr "Prérequis"
 #: gcc/templates/gcc/index.html:58
 msgid ""
 "\n"
-"                        The internship's goal is to adapt to each of you so "
-"you do not have to have a minimal level in IT before the internship.\n"
+"                        The summer camp's goal is to adapt to each of you "
+"thus you do not have to have a minimal level in IT before the summer camp.\n"
 "                        Beside, go take a look to\n"
 "                        "
 msgstr ""
@@ -2749,10 +2749,13 @@ msgstr "Prologin, une association créée en 1991"
 msgid ""
 "\n"
 "                    The Prologin association was created in 1991 to plan the "
-"national computer contest, and run since 2014 the Girls Can Code! "
-"internships.\n"
+"national computer contest, and run since 2014 the Girls Can Code! summer "
+"camp.\n"
 "                    "
 msgstr ""
+"\n"
+"L'association Prologin a été créée en 1991 pour organiser le concours "
+"éponyme, elle organise également les stages GCC! depuis 2014."
 
 #: gcc/templates/gcc/index.html:158
 msgid "Our sponsors"
@@ -2761,7 +2764,7 @@ msgstr "Nos sponsors"
 #: gcc/templates/gcc/index.html:161
 msgid ""
 "\n"
-"            We would like to thanks our sponsors without whom internships "
+"            We would like to thanks our sponsors without whom summer camps "
 "would not happen.\n"
 "            "
 msgstr ""
