--- a/prologin/documents/templates/documents/convocation-finale.tex
+++ b/prologin/documents/templates/documents/convocation-finale.tex
@@ -43,14 +43,15 @@ L'équipe de Prologin vous donne donc rendez-vous le {{ event.date_begin|add_day
 à 9~h~00. Le concours, d'une durée de 36~heures, prendra fin avec le banquet du
 {{ event.date_end|date:"l"|escapetex }} midi. Vous serez donc libre à partir de 15~h~00. Notez que la
 programmation se fera obligatoirement en C, C++, Java, Python, PHP, C\#,
-Haskell ou OCaml. Nous vous demandons de bien vouloir vous munir d'\textbf{une
+Haskell, Rust ou OCaml. Nous vous demandons de bien vouloir vous munir d'\textbf{une
 pièce d'identité et de cette convocation, ainsi que de tous les documents
 ci-joints dûment remplis}. Attention, sans ces documents, nous ne pourrons pas
 vous accepter~!
 
 Si vous le souhaitez, il vous est possible de passer la nuit du vendredi dans
 les locaux. Les organisateurs Prologin assureront l'accueil à partir de 18~h~00
-et proposeront entre autres des formations GNU/Linux pendant la soirée.
+le {{ event.date_begin|date:"l"|escapetex }} et proposeront entre autres des
+formations GNU/Linux pendant la soirée.
 
 En attendant, je vous invite à découvrir sur le site
 \texttt{https://prologin.org} les sujets des finales des années précédentes.
