documents: convocation-finale: remove hard-coded day

--- a/prologin/documents/templates/documents/convocation-finale.tex
+++ b/prologin/documents/templates/documents/convocation-finale.tex
@@ -48,9 +48,11 @@ pièce d'identité et de cette convocation, ainsi que de tous les documents
 ci-joints dûment remplis}. Attention, sans ces documents, nous ne pourrons pas
 vous accepter~!
 
-Si vous le souhaitez, il vous est possible de passer la nuit du vendredi dans
-les locaux. Les organisateurs Prologin assureront l'accueil à partir de 18~h~00
-le {{ event.date_begin|date:"l"|escapetex }} et proposeront entre autres des
+Si vous le souhaitez, il vous est possible de passer la nuit du
+{{ event.date_begin|date:"l"|escapetex }} au
+{{ event.date_begin|add_days:1|date:"l"|escapetex }} dans les locaux. Les
+organisateurs Prologin assureront l'accueil à partir de 18~h~00 le
+{{ event.date_begin|date:"l"|escapetex }} et proposeront entre autres des
 formations GNU/Linux pendant la soirée.
 
 En attendant, je vous invite à découvrir sur le site
