--- a/prologin/documents/templates/documents/interviews.tex
+++ b/prologin/documents/templates/documents/interviews.tex
@@ -77,6 +77,7 @@
         \item Projets perso ?
         \item Nouveaux projets depuis l'année dernière ?
         \item Nous parler de quelque chose en info ?
+        \item Hobbies non informatiques ?
         \item Avis ou remarques sur le concours ?
         \item Des questions pour nous ?
     \end{itemize}
