documents: seed passwords with the current event

--- a/prologin/documents/templates/documents/passwords.tex
+++ b/prologin/documents/templates/documents/passwords.tex
@@ -46,7 +46,7 @@
 }{%
 {{ user.normalized_username|escapetex }}%
 }{%
-{{ user.plaintext_password|escapetex }}%
+{{ contestant.password|escapetex }}%
 }%
 {% endwith %}{% endfor %}%
 \end{multicols}
