--- a/prologin/locale/fr/LC_MESSAGES/django.po
+++ b/prologin/locale/fr/LC_MESSAGES/django.po
@@ -3525,14 +3525,14 @@ msgid ""
 "strong>.\n"
 "            <br> It enables the Prologin association to:\n"
 "            <ul>\n"
-"                <li>to process registration requests on the Prologin website;"
+"                <li>process registration requests on the Prologin website;"
 "</li>\n"
-"                <li>providing communication services (forum) and\n"
+"                <li>provide communication services (forum) and\n"
 "                    code evaluation (online judge) ;</li>\n"
-"                <li>processing applications for participation in the "
+"                <li>process applications for participation in the "
 "Prologin\n"
 "                    contest;</li>\n"
-"                <li>tailor the meals taking into account each dieatry "
+"                <li>tailor the meals taking into account each dietary "
 "restrictions;</li>\n"
 "                <li>answer questions from the participants;</li>\n"
 "                <li>steer the activity of the association (evaluate "
@@ -3555,11 +3555,11 @@ msgid ""
 "        <p>Registration on the site requires the following categories of "
 "data:</p>\n"
 "        <ul>\n"
-"            <li>Identification: pseudonyme, email;</li>\n"
+"            <li>Identification: pseudonym, email;</li>\n"
 "            <li>Internet: audience measurement;</li>\n"
 "        </ul>\n"
 "\n"
-"        <p>Participation in the contest requires additional information:</"
+"        <p>Entering the contest requires additional information:</"
 "p>\n"
 "        <ul>\n"
 "            <li>Identification: name, firstname, address...;</li>\n"
@@ -3578,9 +3578,9 @@ msgid ""
 "        <h4>Mandatory Answers</h4>\n"
 "        <p>Registration to the Prologin website requires (unless specified) "
 "the collection of data necessary to process the registration.</p>\n"
-"        <p>Participating in an edition of the Prologin contest requires "
-"(unless specified) the collection of data necessary to process the "
-"application and the reception on site in good conditions..</p>\n"
+"        <p>Entering the Prologin contest requires "
+"(unless specified otherwise) the collection of data necessary to process the "
+"application and ensure on-site events are correctly held.</p>\n"
 "\n"
 "        <h4>Automated Individual Decision-making</h4>\n"
 "        <p>The processing may include a fully automated decision: "
@@ -3629,8 +3629,8 @@ msgid ""
 "\n"
 "        <h4>Data Transfers Outside of EU</h4>\n"
 "        <p>Data transfers outside the European Union may take place (partner "
-"in Switzerland for the organisation of a regional event). This only concerns "
-"Prologin candidates participating in regional events in Switzerland.</p>\n"
+"in Switzerland for the organisation of a regional event). This is only applicable "
+"to Prologin candidates participating in regional events in Switzerland.</p>\n"
 "    </div>\n"
 "\n"
 "    <button class=\"btn btn-default btn-block\" type=\"button\" data-toggle="
